--- a/src/main/resources/templates/career-guidance.html
+++ b/src/main/resources/templates/career-guidance.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -983,13 +983,8 @@
         <!-- Compact Facebook-like Header -->
         <div class="compact-header">
             <div class="header-left">
-                <a th:href="@{/}" style="text-decoration:none; color:inherit;">
-                    <div class="logo-container">
-                        <div class="logo-icon">
-                            <i class="fas fa-graduation-cap"></i>
-                        </div>
-                        <span class="logo-text">Aadhya Eduverse Private Ltd</span>
-                    </div>
+                <a th:href="@{/}" style="text-decoration:none; color:inherit;">Aadhya Eduverse Private Ltd
+
                 </a>
             </div>
             
