--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3105,7 +3105,7 @@
                         historyContainer.style.opacity = '0';
                         
                         const messageId = 'history_' + Date.now();
-                        const historyContent = `📅 आज का इतिहास - ${data.date}\n\n${data.content}`;
+                        const historyContent = `${data.content}`;
                         
                         historyContainer.innerHTML = `
                             <div class="ai-message">
